# numpy-html

./: LICENSE.md  README.md  pyproject.toml  setup.py
numpy_html/: __init__.py  formatter.py  renderer.py
